array.island.Island.scala.error
Compilation error:
Island:6: error: identifier expected but integer literal found.
    if (num[i]>num[i-1]&&num[i]>0){
                     ^Island:9: error: ']' expected but '}' found.
  }
  ^