array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var niveaux:Int=0
  var i:Int=0
  for (i <- 1 to num.length - 1 ){
    if (num[i]>num[i-1]&&num[i]>0){
      niveaux+=1
    }
  }
  return niveaux
}